# pi-agent

./: .gitignore  AGENTS.md  README.md
.githooks/: pre-commit
agents/: api-doc-fix-one.md  api-doc-plan-dag.md  api-doc-run-next.md  dag-planner.md  dag-reviewer.md  dag-runner.md  dag-worker.md  team-oracle.md  team-planner.md  team-reviewer.md  team-scout.md  team-validator.md  team-worker.md
apps/pi-ghost-dag-launcher/: package-lock.json  package.json
apps/pi-ghost-dag-launcher/scripts/: copy-server-binary.mjs  sync-assets.mjs
apps/pi-ghost-dag-launcher/src/: index.html  main.js  styles.css
apps/pi-ghost-dag-launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/pi-ghost-dag-launcher/src-tauri/icons/: icon.icns
apps/pi-ghost-dag-launcher/src-tauri/src/: main.rs
configs/pi-ghost/: APPEND_SYSTEM.md
configs/unipi/compactor/: config.json
extensions/team-leader-guard/: index.ts  package.json
profiles/: pi-ghost.toml
runtimes/pi-ghost-dag/: README.md
runtimes/pi-ghost-dag/scripts/: cli.mjs  server.mjs  store.mjs
scripts/: install.sh
skills/api-doc-flow/: SKILL.md
skills/api-doc-flow/scripts/: task-store.mjs
skills/team-leader/: SKILL.md
